compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__deprecated_imported_constant.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\nimport module\n\npub fn a() {\n  module.a\n}\n"
---
warning: Deprecated value used
  ┌─ /src/warning/wrn.rakun:5:9
  │
5 │   module.a
  │         ^^ This value has been deprecated

It was deprecated with this message: Don't use this!
