compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__deprecated_list_pattern_syntax.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 2054
expression: "\n    pub fn main() {\n      let letters = [\"b\", \"c\"]\n      case letters {\n        [\"a\"..rest] -> rest\n        _ -> []\n      }\n    }\n        "
---
----- SOURCE CODE

    pub fn main() {
      let letters = ["b", "c"]
      case letters {
        ["a"..rest] -> rest
        _ -> []
      }
    }
        

----- WARNING
warning: Deprecated list pattern matching syntax
  ┌─ test/path:5:13
  │
5 │         ["a"..rest] -> rest
  │             ^^ This spread should be preceded by a comma

This syntax for pattern matching on a list is deprecated.
When matching on the rest of a list it should always be preceded by a
comma, like this: `[item, ..list]`.
