compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__double_unary_bool_variable.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n        pub fn main() {\n            let x = True\n            let _ = !!x\n        }\n        "
---
----- SOURCE CODE

        pub fn main() {
            let x = True
            let _ = !!x
        }
        

----- WARNING
warning: Unnecessary double negation (!!) on bool
  ┌─ /src/warning/wrn.rakun:4:21
  │
4 │             let _ = !!x
  │                     ^^^

Hint: You can safely remove this.
