compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__double_unary_integer_literal.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 464
expression: "pub fn main() { let _ = --7 }"
---
----- SOURCE CODE
pub fn main() { let _ = --7 }

----- WARNING
warning: Unnecessary double negation (--) on integer
  ┌─ /src/warning/wrn.rakun:1:25
  │
1 │ pub fn main() { let _ = --7 }
  │                         ^^^

Hint: You can safely remove this.
